--- a/.env.local
+++ b/.env.local
@@ -6,6 +6,7 @@ VITE_FIREBASE_MESSAGING_SENDER_ID=844422387126
 VITE_FIREBASE_APP_ID=1:844422387126:web:d08e0c799a69f10f9c5d17
 VITE_FIREBASE_MEASUREMENT_ID=G-GPTL40Q9K8
 # aakane amra just ata bosabo and defloy korar port vercel link ta amra diye divo 
+# VITE_API_URL=https://bookcourier-two.vercel.app
 VITE_API_URL=http://localhost:3000
 # emgbb api 
 VITE_IMGBB_API_KEY=cdc95c1969e082db062db519399ae4a5
