--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "firebase": "^12.7.0",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.575.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
@@ -25,6 +26,7 @@
     "react-leaflet": "^5.0.0",
     "react-router": "^7.9.6",
     "react-spinners": "^0.17.0",
+    "recharts": "^3.7.0",
     "swiper": "^12.0.3",
     "tailwindcss": "^4.1.17"
   },
